unpackaged/main/default/objects/sked_Travel_Time_Breakdown_Refresh_Item__c/sked_Travel_Time_Breakdown_Refresh_Item__c.object-meta.xml
<CustomObject>
    <label>Travel Time Breakdown Refresh Queue Item</label>
    <nameField>
        <displayFormat>TTBRQI-{000000}</displayFormat>
        <label>Travel Time Breakdown Refresh Queue Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Time Breakdown Refresh Queue Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>