unpackaged/main/default/objects/sked_Travel_Time_Breakdown_Refresh_Item__c/fields/sked_Order__c.field-meta.xml
<CustomField>
    <fullName>sked_Order__c</fullName>
    <label>Order</label>
    <type>AutoNumber</type>
</CustomField>