unpackaged/main/default/objects/sked_Travel_Time_Breakdown_Refresh_Item__c/fields/sked_Travel_Time_Breakdown_Refresh_Queue__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_Refresh_Queue__c</fullName>
    <label>Travel Time Breakdown Refresh Queue</label>
    <referenceTo>sked_Travel_Time_Breakdown_Refresh_Queue__c</referenceTo>
    <relationshipLabel>Travel Time Breakdown Refresh Queue Item</relationshipLabel>
    <relationshipName>sked_Travel_Time_Breakdown_Refresh_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>